--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_screenutil: ^5.9.3
+  http: ^1.2.2
+  flutter_svg: ^2.0.16
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.0
 
 dev_dependencies:
   flutter_test:
@@ -18,3 +24,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+
+    - assets/svg1.svg
