--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,11 @@ dependencies:
   json_annotation: ^4.9.0
   equatable: ^2.0.7
   google_generative_ai: ^0.4.6
+  mistralai_client_dart: ^1.1.0
+  uuid: ^4.5.1
 
+dependency_overrides:
+  freezed_annotation: ^3.0.0
 
 
 dev_dependencies:
