--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,42 +4,49 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=3.7.2 <4.0.0'
+  flutter: 3.29.3
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.6
-  flutter_screenutil: ^5.9.3
-  http: ^1.2.2
-  flutter_svg: ^2.0.16
-  firebase_core: ^3.12.1
-  firebase_auth: ^5.5.1
-  cloud_firestore: ^5.6.5
-  go_router: ^14.8.1
-  flutter_riverpod: ^2.6.1
-  riverpod_annotation: ^2.6.1
-  get_it: ^8.0.3
-  talker: ^4.7.1
-  json_annotation: ^4.9.0
-  equatable: ^2.0.7
-  google_generative_ai: ^0.4.6
-  mistralai_client_dart: ^1.1.0
-  uuid: ^4.5.1
+  flutter_bloc: 9.1.1
+  flutter_screenutil: 5.9.3
+  http: 1.4.0
+  flutter_svg: 2.1.0
+  firebase_core: 3.13.0
+  firebase_auth: 5.5.3
+  cloud_firestore: 5.6.7
+  go_router: 15.1.1
+  flutter_riverpod: 2.6.1
+  riverpod_annotation: 2.6.1
+  get_it: 8.0.3
+  talker: 4.7.5
+  json_annotation: 4.9.0
+  equatable: 2.0.7
+  google_generative_ai: 0.4.7
+  mistralai_client_dart: 1.1.0
+  uuid: 4.5.1
+  meta: 1.16.0
+  path_provider: ^2.1.5
+  hive_ce: ^2.11.1
+  hive_ce_flutter: ^2.3.0
+  google_fonts: ^6.2.1
+  bloc: ^9.0.0
 
 dependency_overrides:
-  freezed_annotation: ^3.0.0
+  freezed_annotation: 3.0.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  riverpod_generator: ^2.6.5
-  build_runner: ^2.4.15
-  custom_lint: ^0.7.5
-  riverpod_lint: ^2.6.5
-  json_serializable: ^6.9.4
+  flutter_lints: 5.0.0
+  riverpod_generator: 2.6.5
+  build_runner: 2.4.15
+  custom_lint: 0.7.5
+  riverpod_lint: 2.6.5
+  json_serializable: 6.9.5
 flutter:
   uses-material-design: true
   assets:
